--- a/frontend/eCommerceWebsite/src/index.css
+++ b/frontend/eCommerceWebsite/src/index.css
@@ -42,25 +42,29 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+ button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  /* border: 1px solid black;  */
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
-  /* background-color: yellow; */
+  font-family: inherit; 
+  /* background-color: brown;  */
   cursor: pointer;
   transition: border-color 0.25s;
-}
+} 
+
+
 
 button:hover {
-  border-color: #646cff;
+  border-color: #646cff; 
+  background-color: rgb(31, 244, 248);
+  transform: scale(1.2);
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+}  
 
 @media (prefers-color-scheme: light) {
   :root {
